--- a/index.html
+++ b/index.html
@@ -3,22 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>Star Wars Movies</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Patua+One|Staatliches" rel="stylesheet">
+
+
+
   </head>
   <body>
-<h1 id="title">Star Wars Api</h1>
-
-<h2>Click bellow to see all films</h2>
-
-  <button onclick='return false' id="btn-movie" type="button" name="button">movie</button></li>
 
 
-<div class="movie-info">
 
+<button onclick='' id="btn-movie" type="button" name="button">movie</button><br><br>
+
+
+<div id="movie">
 </div>
-  </body>
-  <!--<script type="text/javascript" src="js/main.js"></script>
-  <script type="text/javascript" src="js/atributes-request.js"></script>-->
-  <script type="text/javascript" src="js/text.js">
 
+
+  </body>
+
+  <!--<script type="text/javascript" src="js/main.js"></script>
+  -->
+<script type="text/javascript" src="js/charcters.js"></script>
+  <script type="text/javascript" src="js/atributes-request.js"></script>
+  <script type="text/javascript" src="js/text.js">
   </script>
+
 </html>
