Separando as entidades e implementando a função showDatas()

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Patua+One|Staatliches" rel="stylesheet">
 
-
-
   </head>
   <body>
 
@@ -15,10 +13,15 @@
 
 <button onclick='' id="btn-movie" type="button" name="button">movie</button><br><br>
 
+<div class="container">
+
 
 <div id="movie">
 </div>
 
+<button id="cha"type="button" name="button">Characters</button>
+
+</div>
 
   </body>
 
@@ -27,6 +30,9 @@
 <script type="text/javascript" src="js/charcters.js"></script>
   <script type="text/javascript" src="js/atributes-request.js"></script>
   <script type="text/javascript" src="js/text.js">
+  </script>
+  <script type="text/javascript" src="js/films.js">
+
   </script>
 
 </html>
