Implementando a função getCharacters() e acessando o array de people

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
 <div class="container">
 
-
 <div id="movie">
+  <div id="people">
+  </div>
 </div>
 
 <button id="cha"type="button" name="button">Characters</button>
